--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <script src="./js/controllers.js"></script>
     <script src="./js/services.js"></script>
     <script src="./lib/jquery-2.1.3.min/index.js"></script>
-    <script src="./foundation/js/foundation.min.js"></script>
+    <!--<script src="./foundation/js/foundation.min.js"></script>-->
 
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
