Placeholders for home and show page

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <script src="./lib/jquery-2.1.3.min/index.js"></script>
     <!--<script src="./foundation/js/foundation.min.js"></script>-->
 
+    <link rel="stylesheet" href="./css/block-grid.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
 
@@ -24,7 +25,7 @@
     <div class="container-fluid">
 
         <div class="row">
-            <div class="col-xs-6 col-xs-offset-3">
+            <div class="col-md-8 col-md-offset-2">
                 <a href="#/index">Fandom</a>
                 <a class="btn btn-primary pull-right" href="#/login">Login</a>
                 <a class="btn btn-primary pull-right" href="#/signup">Sign Up</a>
@@ -32,7 +33,7 @@
         </div>
 
         <div class="row">
-            <div class="col-xs-6 col-xs-offset-3">
+            <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
                 <div ng-view></div>
             </div>
         </div>
