--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,13 @@
     <script src="./js/controllers.js"></script>
     <script src="./js/services.js"></script>
     <script src="./lib/jquery-2.1.3.min/index.js"></script>
+    <script src="./js/star-rating.min.js"></script>
     <!--<script src="./foundation/js/foundation.min.js"></script>-->
 
     <link rel="stylesheet" href="./css/block-grid.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
+    <link href="./css/star-rating.min.css" media="all" rel="stylesheet" type="text/css" />
 
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
@@ -33,6 +35,7 @@
         </div>
 
         <div class="row">
+
             <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
                 <div ng-view></div>
             </div>
