--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <script src="./js/controllers.js"></script>
     <script src="./js/services.js"></script>
     <script src="./lib/jquery-2.1.3.min/index.js"></script>
+    <script src="./bootstrap/assets/javascripts/bootstrap.min.js"></script>
     <script src="./js/star-rating.min.js"></script>
     <!--<script src="./foundation/js/foundation.min.js"></script>-->
 
@@ -27,7 +28,7 @@
     <div class="container-fluid">
 
         <div class="row">
-            <div ng-controller="profileController" class="col-md-8 col-md-offset-2">
+            <div ng-controller="profileController" class="col-md-10 col-md-offset-2">
                 <a href="#/index">Fandom</a>
                 <a href="#/profile/{{user._id}}">{{user.local.email}}</a>
                 <a ng-click="logout()" class="button small" ng-show="profile" ng-show="profile">Logout</a>
@@ -39,7 +40,7 @@
 
         <div class="row">
 
-            <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
                 <div ng-view></div>
             </div>
         </div>
