--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
     <link href="./css/star-rating.min.css" media="all" rel="stylesheet" type="text/css" />
 
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 
